2015-03-26  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/utils.c (is_client_present): Reset errno as it will be tested for
	after select() call. Check for select() failure.

2015-03-25  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (check_scan_stop): Remove function.
	(launch_plugin): Remove check_scan_stop() call.
	(handle_scan_stop_signal): New function.
	(attack_network): Set SIGUSR1 signal handler.

	* src/hosts.c (hosts_stop_host): Send SIGUSR1 signal to host, instead of
	sending INTERNAL_COMM_CTRL_STOP via the communication socket.
	(hosts_read_data): Set hosts to next only when h is first host in list.

	* src/pluginlaunch.c (process_mgr_sighand_term): Remove function.
	(pluginlaunch_init): Remove SIGTERM handler.

2015-03-20  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/hosts.c (hosts_stop_all): Stop the right host.

2015-03-19  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/hosts.c (hosts_read_data): Set hosts to next value before calling
	host_rm().

2015-03-16  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0.1.

2015-03-16  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 5.0.0 release.

	* CHANGES: Updated.

	* CMakeLists.txt: Switch version scheme. Exclude generated files from
	source package.

2015-03-16  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-nvt-sync.in: Support for migration of unsigned files
	to the "private/" subdirectory has been removed as it was obsolete
	since the retirement of OpenVAS-5.

2015-03-03  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/ntp.c, src/attack.c: Remove inused includes.

2015-03-02  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/ntp.c: Remove useless include.

2015-03-02  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (is_pattern, pattern_matches)
	(fill_host_kb_ssh_credentials): Remove unused functions.