@@ -365,7 +365,8 @@ handle_client (struct arglist *globals)
   /* Become process group leader and the like ... */
   start_daemon_mode ();
 wait:
-  comm_wait_order (globals);
+  if (comm_wait_order (globals))
+    return;
   ntp_timestamp_scan_starts (globals);
   attack_network (globals, &net_kb);
   if (net_kb != NULL)
