@@ -1,5 +1,14 @@
 2015-03-26  Hani Benhabiles  <hani.benhabiles@greenbone.net>
 
+	* src/comm.c (comm_wait_order): Handle ntp_parse_input () return value
+	correctly. Return value instead of exitting.
+
+	* src/comm.h: Adjust function prototype.
+
+	* src/ntp.c (ntp_parse_input): Handle empty input.
+
+2015-03-26  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
 	* src/utils.c (is_client_present): Reset errno as it will be tested for
 	after select() call. Check for select() failure.
 
